// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prop icon 1`] = `
<div>
  <div
    class="nut-cell nut-cell--clickable "
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__icon"
    >
      <i
        class="nutui-iconfont nut-icon nut-icon-my icon"
      />
    </div>
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        姓名
      </div>
    </div>
    <div
      class="nut-cell__value"
      style="text-align: right;"
    >
      张三
    </div>
    <i
      class="nutui-iconfont nut-icon nut-icon-right nut-cell__link"
    />
  </div>
</div>
`;

exports[`prop isLink 1`] = `
<div>
  <div
    class="nut-cell nut-cell--clickable "
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        URL 跳转
      </div>
    </div>
    <div
      class="nut-cell__value"
      style="text-align: right;"
    >
      https://m.jd.com/
    </div>
    <i
      class="nutui-iconfont nut-icon nut-icon-right nut-cell__link"
    />
  </div>
</div>
`;

exports[`prop title desc subtitle test 1`] = `
<div>
  <div
    class="nut-cell "
    data-testid="prop"
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        我是标题
      </div>
      <div
        class="nut-cell__subtitle"
      >
        副标题描述
      </div>
    </div>
    <div
      class="nut-cell__value"
      style="text-align: right;"
    >
      描述文字
    </div>
  </div>
</div>
`;

exports[`slot default test 1`] = `
<div>
  <div
    class="nut-cell "
    style="border-radius: 6px;"
    to=""
  >
    <div>
      自定义内容
    </div>
  </div>
</div>
`;

exports[`slot linkSlot 1`] = `
<div>
  <div
    class="nut-cell "
    style="border-radius: 6px;"
    to=""
  >
    <div
      class="nut-cell__title"
    >
      <div
        class="nut-cell__maintitle"
      >
        Switch
      </div>
    </div>
    <div
      class="nut-switch switch-open  nut-switch-base "
    >
      <div
        class="switch-button"
      />
    </div>
  </div>
</div>
`;
